Fix admin toolbar overflow and rounding

--- a/esp/esp/themes/theme_data/droplets/less/main.less
+++ b/esp/esp/themes/theme_data/droplets/less/main.less
@@ -172,6 +172,12 @@ ul.nav-collapse {
     padding: 3px 6px !important;
 }
 
+@media (min-width:980px) {
+    .adminbar_user_search .title {
+        border-radius: 6px 6px 0px 0px;
+    }
+}
+
 #adminbar_Manage_content, #adminbar_Other_content {
     padding: 0px 2px !important;
 }
@@ -192,7 +198,6 @@ ul.nav-collapse {
 
 .admin .dropdown-menu {
     padding: 0px;
-    overflow: hidden;
 }
 
 .logo {
